--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -46,7 +46,7 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url('../img/portrait_small.jpg');
+      background: url("../img/portrait_small.jpg");
       width: 150px;
       height: 150px;
     }
@@ -54,11 +54,11 @@
 
   .about-info {
     grid-template-areas:
-      'bioimage'
-      'bio'
-      'job1'
-      'job2'
-      'job3';
+      "bioimage"
+      "bio"
+      "job1"
+      "job2"
+      "job3";
 
     grid-template-columns: 1fr;
   }
@@ -74,11 +74,12 @@
     padding: 2rem;
     #home h1 {
       margin-top: 10vh;
+      font-size: 6rem;
     }
 
     .lg-heading {
-      margin-top:1rem;
-      font-size: 5rem;
+      margin-top: 1rem;
+      font-size: 3.5rem;
     }
   }
 
